2005-06-03  Jono Bacon <jonobacon@gmail.com>

	Reviewed by: Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/mainwindow.py: (PitiviMainWindow.about_cb): 
	Added about dialog

2005-05-09  Edward Hervey  <bilboed@bilboed.com>

	* docs/design/timeline.txt:
	Design document for the timeline

2005-05-04  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/discoverer.py:
	(Discoverer._analyze): whooops, typo :(

2005-05-04  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/viewer.py: 
	(PitiviViewer._create_sinkthreads): 
	Use ximagesink if xvimagesink isn't available
	Use osssink if alsasink isn't available
	(PitiviViewer._create_gui): Added slider

	* pitivi/ui/sourcefactories.py: (SourceListWidget):
	Switch to using ObjectFactory.get_pretty_info()

	* pitivi/playground.py: (PlayGround.play_temporary_filesourcefactory): 
	Don't create a new SmartFileBin of the given factory if that factory
	is already being played

	* pitivi/objectfactory.py: (ObjectFactory.get_pretty_info): 
	Added method to get a prettyfied information string

	* pitivi/discoverer.py:
	Faster discovery of audio/video properties, and cleanup

	* pitivi/bin.py: (SmartBin.set_video_sink_thread):
	Connect to video sink thread with proper filtered link

2005-05-03  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/viewer.py: (PitiviViewer._create_sinkthreads): 
	revert to ximagesink if xvimagesink isn't available
	revert to osssink if alsasink isn't available

2005-05-03  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/bin.py: (SmartFileBin): 
	* pitivi/discoverer.py: (Discoverer):
	Cleanup and using caps[i] instead of caps.get_structure(i)

2005-05-02  Edward Hervey  <bilboed@bilboed.com>

	* __init__.py:
	* bin/pitivi.in:
	* pitivi/__init__.py:
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/dnd.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/sourcelist.py:
	* pitivi/pixmaps/pitivi-file.png:
	* pitivi/pixmaps/pitivi-sound.png: