@@ -1,3 +1,8 @@
+2005-06-03  Edward Hervey  <bilboed@bilboed.com>
+
+	* pitivi/objectfactory.py: (FileSourceFactory.make_video_adapter_bin): 
+	filtered link between videobox and videoscale to avoid borkage...
+
 2005-06-03  Jono Bacon <jonobacon@gmail.com>
 
 	Reviewed by: Edward Hervey  <bilboed@bilboed.com>
